/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * Learn more about Gradle by exploring our samples at https://docs.gradle.org/7.4.2/samples
 */

plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
    id 'jacoco'
    id 'org.sonarqube' version '3.4.0.2513'
}

repositories {
    maven {
        url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots//'

        content{
            includeGroup 'org.bukkit'
            includeGroup'org.spigotmc'

        }
    }
    maven { url = 'https://oss.sonatype.org/content/repositories/snapshots' }
    maven { url = 'https://oss.sonatype.org/content/repositories/central' }
    mavenCentral()

}

dependencies {
    compileOnly 'org.spigotmc:spigot-api:1.8.8-R0.1-SNAPSHOT' // The Spigot API with no shadowing. Requires the OSS repo.
    implementation 'io.github.classgraph:classgraph:4.8.149'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
}

version = '1.1.0'

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(8))
}

tasks {
    shadowJar {
        relocate('io.github.classgraph', 'de.thelooter.classgraph')
        relocate('org.spigotmc', 'de.thelooter.spigot')
        relocate('org.apache.commons', 'de.thelooter.commons')

        archiveFileName.set('Eventchecker-' + version + '.jar')
    }

    jar.dependsOn('shadowJar')
}



test {
    useJUnitPlatform()
}

jacoco {
    toolVersion = '0.8.7'
}

jacocoTestReport {
    reports {
        xml.enabled(true)
        html.enabled(true)
    }
}

sonarqube {
    properties {
        property "sonar.projectKey", "thelooter_EventChecker"
        property "sonar.organization", "thelooter"
        property "sonar.host.url", "https://sonarcloud.io"
    }
}